--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,8 +9,55 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  margin: 0 50px 0 50px;
+  
 }
 
 * {
   box-sizing: border-box;
+}
+
+.navDiv {
+  width: 100vw;
+  height: 90px;
+  padding: 30px;
+  border: 1px solid gray;
+  background-color: #0070f3;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  align-items: center;
+  align-content: space-between;
+}
+
+.formContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: cadetblue;
+  height: 100vh;
+}
+
+.formDiv {
+  width: 400px;
+  height: 500px;
+  margin: 100px;
+  padding: 70px;
+  border: 1px solid black;
+  background-color: antiquewhite;
+  
+}
+
+.userDiv {
+  margin: 20px;
+}
+
+.anchorDiv {
+
+  text-align: center;
+  /* background-color: aquamarine; */
+  flex: 1;
+  
+ 
+
 }
